--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "require": {
-    "craftcms/cms": "^3.0.0",
+    "craftcms/cms": "3.3.20.1",
     "craftcms/contact-form": "2.2.6",
     "vlucas/phpdotenv": "^3.4.0"
   },
